--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,11 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
 }
-
+background-image: url("Nhiu lopy.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 .song {
   visibility: hidden;
 }
