--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
 
-    background-image: url("../img/Nhiu lopy.jpg");
+    background-image: url("../img/1 lopy.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
